Fixed dynamic scale + fixed shortcuts + fixed lein warnings